cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/bug218192.cpp
int bug218192_main() {
    void foo();
    class C1 {
        friend void foo();
    };
    return 0;
}
